<resources>
    <string name="app_name">Accshop</string>
    <string-array name="home_left_menu_items">
        <item>Контрагенты</item>
        <item>Остатки</item>
        <item>Заказы</item>
        <item>Склад</item>
        <item>Продажи</item>
        <item>Долги</item>
    </string-array>
    <string name="server_url">
        http://muproj.ru:8808/StomRestService/api
    </string>
    <string name="summ_title">Сумма : </string>
    <string name="currency">СОМ</string>
    <string name="unit_sht">шт.</string>
    <string name="remains">Остатки</string>
    <string name="debt">Долги</string>
    <string name="sale">Продажи</string>
    <string name="totalLabel">Всего</string>
    <string name="moneyLabel">СОМ</string>
    <string name="dateLabel">Дата : </string>
    <string name="countLabel">Кол-во : </string>
    <string name="priceLabel">Цена : </string>
</resources>
